@@ -20,3 +20,13 @@
 [[#Section]]
 
 [[#Section|text]]
+
+[[Special:Upload]]
+
+[[+]]
+
+[[+ start]]
+
+[[end +]]
+
+[[at the + middle]]
